# webtail

./: .env  .gitignore  .gitmodules  .prod.env  Cargo.toml  Dockerfile  README.md  release.sh  webtail_config.json
resources/: fefs.drawio  webtaiil.drawio
src/: lib.rs  main.rs
src/client/: configuration.rs  file_tailer.rs  mod.rs  process.rs
src/message/: mod.rs
src/server/: broadcaster.rs  controller.rs  mod.rs
src/server/controller/: inbound.rs  outbound.rs
